guideme.milovana/src/org/guideme/guideme/milovana/nyxparser/NyxScriptParser.java
// Generated from NyxScript.g4 by ANTLR 4.4
package org.guideme.guideme.milovana.nyxparser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NyxScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__39=1, T__38=2, T__37=3, T__36=4, T__35=5, T__34=6, T__33=7, T__32=8, 
		T__31=9, T__30=10, T__29=11, T__28=12, T__27=13, T__26=14, T__25=15, T__24=16, 
		T__23=17, T__22=18, T__21=19, T__20=20, T__19=21, T__18=22, T__17=23, 
		T__16=24, T__15=25, T__14=26, T__13=27, T__12=28, T__11=29, T__10=30, 
		T__9=31, T__8=32, T__7=33, T__6=34, T__5=35, T__4=36, T__3=37, T__2=38, 
		T__1=39, T__0=40, DELAY_STYLE=41, TIME_UNIT=42, QUOTED_STRING=43, PAGE_ID=44, 
		INT=45, NEWLINE=46, WS=47;
	public static final String[] tokenNames = {
		"<INVALID>", "'action:'", "'instruc:'", "'media:pic('", "'mustnot('", 
		"'hidden:sound('", "'id:'", "'vert'", "'mult'", "'target'", "'self:'", 
		"'target:'", "'max:'", "'random('", "'range('", "'yes:'", "'cap'", "'('", 
		"'from:'", "'yn('", "'action'", "','", "'unset('", "'style:'", "'time:'", 
		"'loops:'", "'go('", "'buttons('", "'must('", "'to:'", "':'", "'horiz'", 
		"'delay('", "'text:'", "'no:'", "'page('", "'set('", "'e'", "'min:'", 
		"')'", "'prefix'", "DELAY_STYLE", "TIME_UNIT", "QUOTED_STRING", "PAGE_ID", 
		"INT", "NEWLINE", "WS"
	};
	public static final int
		RULE_guide = 0, RULE_page = 1, RULE_must_not = 2, RULE_must = 3, RULE_page_option = 4, 
		RULE_action = 5, RULE_action_group = 6, RULE_action_prefix = 7, RULE_action_set = 8, 
		RULE_action_unset = 9, RULE_text = 10, RULE_media_pic = 11, RULE_hidden_sound = 12, 
		RULE_action_buttons = 13, RULE_button = 14, RULE_action_delay = 15, RULE_time = 16, 
		RULE_action_go = 17, RULE_action_yn = 18, RULE_yes_button = 19, RULE_no_button = 20, 
		RULE_action_target = 21, RULE_range = 22;
	public static final String[] ruleNames = {
		"guide", "page", "must_not", "must", "page_option", "action", "action_group", 
		"action_prefix", "action_set", "action_unset", "text", "media_pic", "hidden_sound", 
		"action_buttons", "button", "action_delay", "time", "action_go", "action_yn", 
		"yes_button", "no_button", "action_target", "range"
	};

	@Override
	public String getGrammarFileName() { return "NyxScript.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NyxScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GuideContext extends ParserRuleContext {
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public GuideContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_guide; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterGuide(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitGuide(this);
		}
	}

	public final GuideContext guide() throws RecognitionException {
		GuideContext _localctx = new GuideContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_guide);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__36) | (1L << T__12) | (1L << PAGE_ID))) != 0)) {
				{
				{
				setState(46); page();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public Must_notContext must_not() {
			return getRuleContext(Must_notContext.class,0);
		}
		public Page_optionContext page_option(int i) {
			return getRuleContext(Page_optionContext.class,i);
		}
		public MustContext must() {
			return getRuleContext(MustContext.class,0);
		}
		public TerminalNode PAGE_ID() { return getToken(NyxScriptParser.PAGE_ID, 0); }
		public List<Page_optionContext> page_option() {
			return getRuleContexts(Page_optionContext.class);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitPage(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_page);
		int _la;
		try {
			setState(67);
			switch (_input.LA(1)) {
			case T__36:
				enterOuterAlt(_localctx, 1);
				{
				setState(52); must_not();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(53); must();
				}
				break;
			case PAGE_ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(54); match(PAGE_ID);
				setState(55); match(T__5);
				setState(64);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__37) | (1L << T__35) | (1L << T__18) | (1L << T__7) | (1L << T__4) | (1L << T__3))) != 0)) {
					{
					setState(56); page_option();
					setState(61);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__19) {
						{
						{
						setState(57); match(T__19);
						setState(58); page_option();
						}
						}
						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(66); match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Must_notContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(NyxScriptParser.INT, i);
		}
		public TerminalNode PAGE_ID(int i) {
			return getToken(NyxScriptParser.PAGE_ID, i);
		}
		public List<TerminalNode> PAGE_ID() { return getTokens(NyxScriptParser.PAGE_ID); }
		public List<TerminalNode> INT() { return getTokens(NyxScriptParser.INT); }
		public Must_notContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_must_not; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterMust_not(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitMust_not(this);
		}
	}

	public final Must_notContext must_not() throws RecognitionException {
		Must_notContext _localctx = new Must_notContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_must_not);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(T__36);
			setState(70); match(T__30);
			setState(71); match(PAGE_ID);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72); match(T__19);
				setState(73); match(T__20);
				setState(74); match(INT);
				setState(75); match(T__10);
				setState(76); match(PAGE_ID);
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__19 );
			setState(81); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MustContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(NyxScriptParser.INT, i);
		}
		public TerminalNode PAGE_ID(int i) {
			return getToken(NyxScriptParser.PAGE_ID, i);
		}
		public List<TerminalNode> PAGE_ID() { return getTokens(NyxScriptParser.PAGE_ID); }
		public List<TerminalNode> INT() { return getTokens(NyxScriptParser.INT); }
		public MustContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_must; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterMust(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitMust(this);
		}
	}

	public final MustContext must() throws RecognitionException {
		MustContext _localctx = new MustContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_must);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(T__12);
			setState(84); match(T__30);
			setState(85); match(PAGE_ID);
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86); match(T__19);
				setState(87); match(T__20);
				setState(88); match(INT);
				setState(89); match(T__10);
				setState(90); match(PAGE_ID);
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__19 );
			setState(95); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Page_optionContext extends ParserRuleContext {
		public Hidden_soundContext hidden_sound() {
			return getRuleContext(Hidden_soundContext.class,0);
		}
		public Action_groupContext action_group() {
			return getRuleContext(Action_groupContext.class,0);
		}
		public Media_picContext media_pic() {
			return getRuleContext(Media_picContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public Page_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterPage_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitPage_option(this);
		}
	}

	public final Page_optionContext page_option() throws RecognitionException {
		Page_optionContext _localctx = new Page_optionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_page_option);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); text();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); media_pic();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99); hidden_sound();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100); action_group();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101); action();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public Action_ynContext action_yn() {
			return getRuleContext(Action_ynContext.class,0);
		}
		public Action_goContext action_go() {
			return getRuleContext(Action_goContext.class,0);
		}
		public Action_unsetContext action_unset() {
			return getRuleContext(Action_unsetContext.class,0);
		}
		public Action_setContext action_set() {
			return getRuleContext(Action_setContext.class,0);
		}
		public Action_buttonsContext action_buttons() {
			return getRuleContext(Action_buttonsContext.class,0);
		}
		public Action_delayContext action_delay() {
			return getRuleContext(Action_delayContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_action);
		try {
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104); action_buttons();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); action_delay();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); action_go();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(107); action_yn();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(108); action_set();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(109); action_unset();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_groupContext extends ParserRuleContext {
		public Action_prefixContext action_prefix() {
			return getRuleContext(Action_prefixContext.class,0);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public Action_groupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction_group(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction_group(this);
		}
	}

	public final Action_groupContext action_group() throws RecognitionException {
		Action_groupContext _localctx = new Action_groupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_action_group);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); action_prefix();
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__33) | (1L << T__32) | (1L << T__9))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(114); match(T__23);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__18) | (1L << T__4) | (1L << T__3))) != 0)) {
				{
				{
				setState(115); action();
				setState(117);
				_la = _input.LA(1);
				if (_la==T__19) {
					{
					setState(116); match(T__19);
					}
				}

				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_prefixContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(NyxScriptParser.INT, 0); }
		public Action_prefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction_prefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction_prefix(this);
		}
	}

	public final Action_prefixContext action_prefix() throws RecognitionException {
		Action_prefixContext _localctx = new Action_prefixContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_action_prefix);
		try {
			setState(131);
			switch (_input.LA(1)) {
			case T__39:
				enterOuterAlt(_localctx, 1);
				{
				setState(126); match(T__39);
				}
				break;
			case T__38:
				enterOuterAlt(_localctx, 2);
				{
				setState(127); match(T__38);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(128); match(T__3);
				setState(129); match(INT);
				setState(130); match(T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_setContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(NyxScriptParser.INT, i);
		}
		public Action_prefixContext action_prefix() {
			return getRuleContext(Action_prefixContext.class,0);
		}
		public TerminalNode PAGE_ID(int i) {
			return getToken(NyxScriptParser.PAGE_ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(NyxScriptParser.INT); }
		public List<TerminalNode> PAGE_ID() { return getTokens(NyxScriptParser.PAGE_ID); }
		public Action_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction_set(this);
		}
	}

	public final Action_setContext action_set() throws RecognitionException {
		Action_setContext _localctx = new Action_setContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_action_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__3))) != 0)) {
				{
				setState(133); action_prefix();
				}
			}

			setState(136); match(T__4);
			setState(137); match(T__20);
			setState(138); match(INT);
			setState(139); match(T__10);
			setState(140); match(PAGE_ID);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(141); match(T__19);
				setState(142); match(T__20);
				setState(143); match(INT);
				setState(144); match(T__10);
				setState(145); match(PAGE_ID);
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_unsetContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(NyxScriptParser.INT, i);
		}
		public Action_prefixContext action_prefix() {
			return getRuleContext(Action_prefixContext.class,0);
		}
		public TerminalNode PAGE_ID(int i) {
			return getToken(NyxScriptParser.PAGE_ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(NyxScriptParser.INT); }
		public List<TerminalNode> PAGE_ID() { return getTokens(NyxScriptParser.PAGE_ID); }
		public Action_unsetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_unset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction_unset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction_unset(this);
		}
	}

	public final Action_unsetContext action_unset() throws RecognitionException {
		Action_unsetContext _localctx = new Action_unsetContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action_unset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__39) | (1L << T__38) | (1L << T__3))) != 0)) {
				{
				setState(153); action_prefix();
				}
			}

			setState(156); match(T__18);
			setState(157); match(T__20);
			setState(158); match(INT);
			setState(159); match(T__10);
			setState(160); match(PAGE_ID);
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__19) {
				{
				{
				setState(161); match(T__19);
				setState(162); match(T__20);
				setState(163); match(INT);
				setState(164); match(T__10);
				setState(165); match(PAGE_ID);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public TerminalNode QUOTED_STRING() { return getToken(NyxScriptParser.QUOTED_STRING, 0); }
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitText(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_text);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173); match(T__7);
			setState(174); match(QUOTED_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Media_picContext extends ParserRuleContext {
		public TerminalNode QUOTED_STRING() { return getToken(NyxScriptParser.QUOTED_STRING, 0); }
		public Media_picContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_media_pic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterMedia_pic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitMedia_pic(this);
		}
	}

	public final Media_picContext media_pic() throws RecognitionException {
		Media_picContext _localctx = new Media_picContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_media_pic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); match(T__37);
			setState(177); match(T__34);
			setState(178); match(QUOTED_STRING);
			setState(179); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hidden_soundContext extends ParserRuleContext {
		public TerminalNode QUOTED_STRING() { return getToken(NyxScriptParser.QUOTED_STRING, 0); }
		public TerminalNode INT() { return getToken(NyxScriptParser.INT, 0); }
		public Hidden_soundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hidden_sound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterHidden_sound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitHidden_sound(this);
		}
	}

	public final Hidden_soundContext hidden_sound() throws RecognitionException {
		Hidden_soundContext _localctx = new Hidden_soundContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_hidden_sound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); match(T__35);
			setState(182); match(T__34);
			setState(183); match(QUOTED_STRING);
			setState(187);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(184); match(T__19);
				setState(185); match(T__15);
				setState(186); match(INT);
				}
			}

			setState(189); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Action_buttonsContext extends ParserRuleContext {
		public Action_prefixContext action_prefix() {
			return getRuleContext(Action_prefixContext.class,0);
		}
		public ButtonContext button(int i) {
			return getRuleContext(ButtonContext.class,i);
		}
		public List<ButtonContext> button() {
			return getRuleContexts(ButtonContext.class);
		}
		public Action_buttonsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action_buttons; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterAction_buttons(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitAction_buttons(this);
		}
	}

	public final Action_buttonsContext action_buttons() throws RecognitionException {
		Action_buttonsContext _localctx = new Action_buttonsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_action_buttons);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191); action_prefix();
			setState(192); match(T__13);
			setState(197); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(193); button();
				setState(195);
				_la = _input.LA(1);
				if (_la==T__19) {
					{
					setState(194); match(T__19);
					}
				}

				}
				}
				setState(199); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__31 );
			setState(201); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ButtonContext extends ParserRuleContext {
		public TerminalNode INT(int i) {
			return getToken(NyxScriptParser.INT, i);
		}
		public TerminalNode QUOTED_STRING() { return getToken(NyxScriptParser.QUOTED_STRING, 0); }
		public List<TerminalNode> INT() { return getTokens(NyxScriptParser.INT); }
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public TerminalNode PAGE_ID() { return getToken(NyxScriptParser.PAGE_ID, 0); }
		public ButtonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_button; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).enterButton(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NyxScriptListener ) ((NyxScriptListener)listener).exitButton(this);
		}
	}
